--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ EXIF_WORKERS=2
 # CONCURRENCY=20
 
 # Metadata mặc định
-META_AUTHOR=gobandzus.com
+META_AUTHOR=roviena.com
 META_LAT=32.7688
 META_LNG=-97.3093
 META_DAYS_AGO=20
