--- a/.env
+++ b/.env
@@ -13,10 +13,7 @@ EXIF_WORKERS=2
 # CONCURRENCY=20
 
 # Metadata mặc định
-META_AUTHOR=gobandzus.com
-META_LAT=32.7688
-META_LNG=-97.3093
-META_DAYS_AGO=20
-
-# Files input
-INPUT_CSV=sample-testgpt.csv
+META_AUTHOR=auranestx.com
+META_LAT=32.938496
+META_LNG=-96.890232
+META_DAYS_AGO=31
