--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "async-mutex": "^0.5.0",
+    "aws-sdk": "^2.1692.0",
     "csv-parse": "^5.5.0",
     "csv-stringify": "^6.5.0",
     "dayjs": "^1.11.10",
@@ -16,7 +17,7 @@
     "node-fetch": "^2.7.0",
     "p-limit": "^4.0.0",
     "sharp": "^0.33.3",
-    "aws-sdk": "^2.1692.0"
+    "ssh2-sftp-client": "^12.0.1"
   },
   "engines": {
     "node": ">=18"
