add start and end line

--- a/.env_new
+++ b/.env_new
@@ -13,7 +13,7 @@ SFTP_HOST=165.227.208.97
 SFTP_PORT=22
 SFTP_USER=master_rwbfyqxfrr   # Cloudways Master Username
 SFTP_PASS=gKWqXGPXmq24
-SFTP_REMOTE_DIR=/applications/aupyevfnzu/public_html/wp-content/uploads #aupyevfnzu là ID của app (Database name)
+SFTP_REMOTE_DIR=/applications/bdbucamcgp/public_html/wp-content/uploads #aupyevfnzu là ID của app (Database name)
 # SFTP_BASE_URL=https://kentonhome.shop/wp-content/uploads # ko dùng sẽ lấy domain từ meta_author
 
 #=================================================================================
@@ -28,13 +28,19 @@ EXIF_WORKERS=2
 
 
 # Metadata mặc định
-META_AUTHOR=kentonhome.shop
-META_LAT=45.5890
-META_LNG=-122.7060
+META_AUTHOR=loopconceptstore.com
+META_LAT=33.4897
+META_LNG=-101.9282
 META_DAYS_AGO=75
 
 # Setting
 UPLOAD_MODE=sftp # sftp || spaces - đổi thành sftp khi muốn upload lên hosting, spaces khi muốn upload lên DO
 IMG_NAME_WITH_AUTHOR=true #true or false
-EXPORT_BATCH_SIZE=500
-RANDOM_SKU_ENABLED=true #true will generate random SKU, false get SKU from original csv file
+EXPORT_BATCH_SIZE=5 # How many products per csv file
+RANDOM_SKU_ENABLED=true #true || false - true will generate random SKU, false get SKU from original csv file
+CSV_START_LINE=4501 # để trống hoặc 1 sẽ chạy từ đầu file
+CSV_END_LINE=4515 # để trống hoặc 0 sẽ chạy đến hết file
+
+
+# Debug
+DEBUG_IMAGES=true # true || false
