--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "async-mutex": "^0.5.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.13.2",
     "csv-parse": "^5.5.0",
     "csv-stringify": "^6.5.0",
     "dayjs": "^1.11.10",
